<resources>
    <string name="app_name">Mano-solidaria</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="prefs_file">com.mano_solidaria.PREFERENCE_FILE_KEY</string>
    <string name="default_web_client_id">963251373970-ufcki0g7c35fq7ci4g465p197kl2tp2m.apps.googleusercontent.com</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_solicitantes_propuestas">SolicitantesPropuestasActivity</string>

    <!-- strings de nav bar -->
    <string name="home">Inicio</string>
    <string name="settings">Configuración</string>
    <string name="profile">Perfil</string>
    <string name="menu">Abrir menú</string>
    <string name="drawer_option_1">Opción 1</string>
    <string name="drawer_option_2">Opción 2</string>
    <string name="drawer_option_3">Opción 3</string>
    <string name="logout">Cerrar sesión</string>
    <string name="dark_mode">Modo Claro</string>
    <string name="light_mode">Modo Oscuro</string>
    <string name="change_language">Cambiar Idioma</string>

    <!-- strings de ver reservas -->
    <string name="mis_reservas">Mis Reservas</string>
    <string name="detalle_reserva">Detalle de la Reserva</string>
    <string name="reserva_no_encontrada">Reserva no encontrada</string>
    <string name="peso_reservado">Reservado: %1$s kg</string>
    <string name="distancia">Distancia: %1$s km</string>
    <string name="distancia_lista">Dist.: %1$s km</string>
    <string name="estado">Estado: %1$s</string>
    <string name="imagen_reserva">Imagen de la reserva</string>
    <string name="nombre_alimento">Alimento: %1$s</string>
    <string name="maxima_reserva">Reserva máxima: %1$s kg</string>
    <string name="rango_reserva">Rango de reserva: %1$s kg</string>
    <string name="fecha_publicacion">Fecha de publicación: %1$s</string>
    <string name="fecha_publicacion_donacion">Fecha de publicación: %1$s</string>
    <string name="numero_no_valido">Número no válido</string>
    <string name="operacion_cancelada">Operación cancelada</string>
    <string name="distancia_km">Distancia en km</string>
    <string name="donante">Donante: %1$s</string>
    <string name="descripcion">Descripción: %1$s</string>
    <string name="palabra_clave">Palabras clave: %1$s</string>
    <string name="cancelar_reserva">Cancelar reserva</string>
    <string name="max_reserva_posible">Máxima reserva posible: mínimo 1 kg, máximo %1$s kg</string>
    <string name="nuevo_peso_reservado">Nuevo peso reservado</string>
    <string name="confirmar">Confirmar</string>
    <string name="cancelar">Cancelar</string>
    <string name="confirmacion">Confirmación</string>
    <string name="confirmacion_cancelacion">¿Seguro?</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="modificar_reserva">Modificar reserva</string>

    <!-- strings de home activity -->
    <string name="bienvenido">Bienvenido</string>
    <string name="email">Correo electrónico</string>
    <string name="tipo_logueo">Tipo de inicio de sesión</string>
    <string name="contraseña">Contraseña</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="siguiente">Siguiente</string>
    <string name="rol_usuario_no_reconocido">Rol de usuario no reconocido.</string>
    <string name="rol_usuario_no_encontrado">No se encontró el rol del usuario.</string>
    <string name="error_obtener_rol_usuario">Error al obtener el rol de usuario.</string>
    <string name="usuario_no_autenticado">Usuario no autenticado.</string>

    <!-- strings de login activity -->
    <string name="ingrese_sus_datos">Ingresa tu correo y contraseña</string>
    <string name="ingrese_su_email">Ingrese su correo electrónico</string>
    <string name="ingrese_su_contraseña">Ingrese su contraseña</string>
    <string name="log_in">Iniciar sesión</string>
    <string name="sign_in">Registrarme</string>

    <!-- strings de form activity -->
    <string name="rol_usuario">Rol de usuario</string>
    <string name="solicitante">Solicitante</string>
    <string name="donador_registro">Donador</string>
    <string name="nombre">Nombre</string>
    <string name="nombre_usuario">Nombre de usuario</string>
    <string name="ingrese_email">Ingrese su correo electrónico</string>
    <string name="ingrese_contraseña">Ingrese una contraseña</string>
    <string name="horario_atencion_inicio">Horario de atención (inicio)</string>
    <string name="horario_atencion_fin">Horario de atención (fin)</string>
    <string name="direccion">Dirección</string>
    <string name="ingrese_direccion">Ingrese su dirección</string>
    <string name="elegir_foto">Elegir foto</string>
    <string name="espacio_para_mostrar_foto">Espacio para mostrar la foto</string>
    <string name="registrarme">Registrarme</string>

    <string name="registro_completar_nombre">Por favor, complete el nombre</string>
    <string name="registro_completar_email">Por favor, complete el correo electrónico</string>
    <string name="registro_completar_contrasena">Por favor, complete la contraseña</string>
    <string name="registro_completar_direccion">Por favor, complete la dirección</string>

    <!-- strings de registrar donacion -->
    <string name="alimento">Alimento:</string>
    <string name="ingrese_el_alimento">Ingrese el alimento</string>
    <string name="peso_kg">Peso (kg):</string>
    <string name="ingrese_peso">Ingrese el peso</string>
    <string name="ingrese_duracion">Ingrese la duración</string>
    <string name="informacion_adicional">Información adicional:</string>
    <string name="ingrese_mas_informacion">Ingrese más información</string>
    <string name="registrar">Registrar</string>

    <string name="donador_completar_campos">Por favor, complete todos los campos correctamente.</string>
    <string name="donador_seleccionar_imagen">Por favor, seleccione una imagen.</string>
    <string name="donador_error_registrar_donacion">Error al registrar la donación.</string>

    <!-- strings de main donadores -->
    <string name="active_donations">Mis donaciones</string>
    <string name="register_donation">Registrar donación</string>
    <string name="extended_duration">Duración extendida</string>
    <string name="no_reservations_for_donation">No hay reservas para esta donación.</string>
    <string name="loading_details">Cargando detalles...</string>
    <string name="donador_alimento">Alimento: %1$s</string>
    <string name="donador_duracion_restante">Termina en: %1$s días</string>
    <string name="donador_disponible">Disponible: %1$s kg</string>
    <string name="donador_reservado">Reservado: %1$s kg</string>
    <string name="donador_estado">Estado: %1$s</string>
    <string name="donador_entregado">Entregado: %1$s kg</string>
    <string name="donador_descripcion">Descripción: %1$s</string>
    <string name="donador_extender_duracion">Extender duración</string>
    <string name="donador_dias">Días</string>
    <string name="dias">días</string>
    <string name="termina">Termina en</string>

    <string name="donador_palabra_clave">Palabra clave: %1$s</string>
    <string name="donador_kg_reservados">Kg reservados: %1$s</string>
    <string name="donador_estado_reserva">Estado: %1$s</string>
    <string name="donador_entrega_confirmada">Entrega confirmada</string>
    <string name="donador_confirmar_entrega">Confirmar entrega</string>

    <string-array name="tipo_alimento_options">
        <item>Fruta</item>
        <item>Verdura</item>
        <item>Cereal</item>
        <item>Proteína</item>
        <item>Lácteo</item>
        <item>Otros</item>
    </string-array>

    <string-array name="requiere_refrigeracion_options">
        <item>Sí</item>
        <item>No</item>
    </string-array>

    <string-array name="es_perecedero_options">
        <item>Sí</item>
        <item>No</item>
    </string-array>

    <!-- Tipo de Alimento -->
    <string name="tipo_alimento">Tipo de Alimento: %1$s</string>

    <!-- Requiere Refrigeración -->
    <string name="requiere_refrigeracion">Requiere Refrigeración: %1$s</string>

    <!-- Es Perecedero -->
    <string name="es_perecedero">Es Perecedero: %1$s</string>

    <!-- Tipo de Alimento -->
    <string name="tipo_alimento_registro">Tipo de Alimento:</string>

    <!-- Requiere Refrigeración -->
    <string name="requiere_refrigeracion_registro">Requiere Refrigeración:</string>

    <!-- Es Perecedero -->
    <string name="es_perecedero_registro">Es Perecedero:</string>
    <string name="donaciones_activas">Activas</string>
    <string name="donaciones_pendientes">Totalmente reservadas</string>
    <string name="donaciones_finalizadas">Finalizadas</string>
    <string name="registra_primera_propuesta">¡Registra tu primera propuesta de donación!</string>
    <string name="registrar_donacion">Registrar Donacion</string>

    <!-- Terminar donacion -->

    <string name="terminar_donacion_button">Terminar Donación</string>
    <string name="donacion_terminada">Donación Completa</string>
    <string name="error_terminar_donacion">Error al terminar la donación</string>

    <!-- strings de crear reserva -->

    <string name="applicants_proposals">Solicitantes propuestas</string>
    <string name="view_made_reservations">Ver reservas realizadas</string>
    <string name="food_donation">Alimento: %1$s</string>
    <string name="expires_in">Quedan: %1$s días</string>
    <string name="donor_label">Donante: %1$s</string>
    <string name="distance_label">Distancia: </string>
    <string name="reservation_details">Detalle de reserva</string>
    <string name="food_label">Alimento:</string>
    <string name="remaining_weight_label">Peso restante: %1$s kg</string>
    <string name="total_weight_label">Peso total: %1$s kg</string>
    <string name="kilograms_to_reserve">Kilos a reservar:</string>
    <string name="invalid_quantity">Cantidad inválida</string>
    <string name="reserve_label">Reservar</string>
    <string name="subscribe_to_donor">Suscribirse al donador</string>
    <string name="unsubscribe_from_donor">Desuscribirse del donador</string>
    <string name="description_label">Descripción: %1$s</string>
    <string name="donation_status_label">Estado de donación: %1$s</string>
    <string name="remaining_weight_label_detail">Peso restante:</string>
    <string name="total_weight_label_detail">Peso total:</string>
    <string name="donor_label_detail">Donante:</string>








</resources>

