<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rol_usuario"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/solicitante" />

            <Switch
                android:id="@+id/usuario_rol_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:thumbTint="@color/purple_700"
                android:trackTint="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/donador_registro" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/usuario_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/nombre_usuario"
            android:inputType="textEmailAddress" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/usuario_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/ingrese_email" />

        <TextView
            android:id="@+id/usuario_contrasenia_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contraseña"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/usuario_contrasenia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/ingrese_contraseña"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/horario_atencion_inicio_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/horario_atencion_inicio"
            android:textSize="15sp" />

        <TimePicker
            android:id="@+id/horario_atencion_inicio"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="16dp"
            android:timePickerMode="spinner" />

        <TextView
            android:id="@+id/horario_atencion_fin_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/horario_atencion_fin"
            android:textSize="15sp" />

        <TimePicker
            android:id="@+id/horario_atencion_fin"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="16dp"
            android:timePickerMode="spinner" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/direccion"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/usuario_direccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:layout_marginBottom="10dp"
            android:hint="@string/ingrese_direccion" />

        <androidx.cardview.widget.CardView
            app:cardBackgroundColor="@color/black"
            app:cardCornerRadius="38dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp">
            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/autocomplete_fragment"
                android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </androidx.cardview.widget.CardView>

        <androidx.fragment.app.FragmentContainerView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:map="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map_form"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            map:cameraTilt="30"
            map:uiRotateGestures="true"
            map:uiZoomControls="true" />

        <Button
            android:id="@+id/btnElegirFoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/elegir_foto" />

        <ImageView
            android:id="@+id/imgFoto"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:src="@android:drawable/ic_menu_camera"
            android:contentDescription="@string/espacio_para_mostrar_foto" />

        <Button
            android:id="@+id/boton_guardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrarme" />

    </LinearLayout>
</ScrollView>